fix(style): Tweak $light-text to meet colour contrast standards

--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -3,7 +3,7 @@ $black: #000;
 $text-color: #222;
 $dark-bg: #333;
 $bright-green: #30ff8a;
-$light-text: #999;
+$light-text: #9b9b9b;
 $light-shade: #ddd;
 $off-white: #f4f2e9;
 $white: #fff;
